--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   
   <!-- CSS -->
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   
   <!-- Google Fonts for better typography -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
