--- a/code.html
+++ b/code.html
@@ -12,7 +12,7 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   
   <!-- CSS -->
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   
   <!-- Google Fonts for better typography -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -61,7 +61,7 @@
         <div class="cards">
           <div class="card" data-category="javascript">
             <h3>JavaScript Closure</h3>
-            <pre><code class="language-javascript">// See ../js/closure-example.js for the full runnable example
+            <pre><code class="language-javascript">// See ./js/closure-example.js for the full runnable example
 function outer() {
   let count = 0;
   return function() {
@@ -130,6 +130,6 @@ function outer() {
   </footer>
 
   <!-- JS -->
-  <script src="../js/main.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 </html>
