--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   </footer>
 
   <!-- JS -->
-  <script src="../js/main.js"></script>
+  <script src="./js/main.js"></script>
   <script>
     // Login check and nav update
     const loggedInUser = localStorage.getItem('loggedInUser');
