--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   
   <!-- CSS -->
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   
   <!-- Google Fonts for better typography -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -97,6 +97,6 @@
   </footer>
 
   <!-- JS -->
-  <script src="../js/main.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 </html>
