--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
   
   <!-- CSS -->
    <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="../css/login.css">  <!-- Updated path for consistency -->
+  <link rel="stylesheet" href="./css/login.css">  <!-- Updated path for consistency -->
   
   <!-- Google Fonts for better typography -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -57,6 +57,6 @@
   </div>
 
   <!-- JS -->
-  <script src="../js/login.js"></script>
+  <script src="./js/login.js"></script>
 </body>
 </html>
