--- a/premium.html
+++ b/premium.html
@@ -12,7 +12,7 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   
   <!-- CSS -->
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   
   <!-- Google Fonts for better typography -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -157,8 +157,8 @@
   </footer>
 
   <!-- JS -->
-  <script src="../js/main.js"></script>
-  <script src="../js/premium-unlock.js"></script>
+  <script src="./js/main.js"></script>
+  <script src="./js/premium-unlock.js"></script>
   <script>
     // Nav login/logout update
     const loginLink = document.getElementById('login-link');
