mobile friendly css

--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
 
   <nav>
     <div class="container">
+      <!-- Hamburger Toggle (Hidden Checkbox) -->
+      <input type="checkbox" id="nav-toggle">
+      <!-- Hamburger Icon (Three Lines) -->
+      <label for="nav-toggle" id="nav-toggle-label">
+        <span></span>
+        <span></span>
+        <span></span>
+      </label>
+      
       <ul>
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="tutorials.html">Tutorials</a></li>
