--- a/tutorials.html
+++ b/tutorials.html
@@ -28,12 +28,22 @@
 
   <nav>
     <div class="container">
+      <!-- Hamburger Toggle (Hidden Checkbox) -->
+      <input type="checkbox" id="nav-toggle">
+      <!-- Hamburger Icon (Three Lines) -->
+      <label for="nav-toggle" id="nav-toggle-label">
+        <span></span>
+        <span></span>
+        <span></span>
+      </label>
+      
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="tutorials.html" class="active">Tutorials</a></li>
         <li><a href="code.html">Code</a></li>
         <li><a href="premium.html">Premium</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="login.html" id="login-link">Login</a></li>
       </ul>
       <!-- Sliding indicator (animated via JS) -->
       <span class="nav-indicator"></span>
