--- a/premium.html
+++ b/premium.html
@@ -36,6 +36,15 @@
 
   <nav>
     <div class="container">
+      <!-- Hamburger Toggle (Hidden Checkbox) -->
+      <input type="checkbox" id="nav-toggle">
+      <!-- Hamburger Icon (Three Lines) -->
+      <label for="nav-toggle" id="nav-toggle-label">
+        <span></span>
+        <span></span>
+        <span></span>
+      </label>
+      
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="tutorials.html">Tutorials</a></li>
@@ -76,8 +85,6 @@
           <h3>All Courses</h3>
 
           <div class="cards" id="all-courses-cards">
-
-
             <div class="card" data-course="js">
               <h3>JavaScript Internals (Animated)</h3>
               <p>Execution Context, Event Loop, Closures</p>
@@ -106,7 +113,6 @@
               </div>
             </div>
 
-
             <div class="card" data-course="js1">
               <h3> Transitions</h3>
               <p>transforms, performance</p>
@@ -120,7 +126,6 @@
                  <iframe width="100%" height="315" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" title="JavaScript Internals Animated Course" allowfullscreen></iframe>
               </div>
             </div>
-
 
             <!-- Add more cards here -->
           </div>
