--- a/premium.html
+++ b/premium.html
@@ -71,12 +71,16 @@
   <div class="card" data-course="js">
     <h3>JavaScript Internals (Animated)</h3>
     <p>Execution Context, Event Loop, Closures</p>
+    
+    <div class="course-content">
+  <div class="course-locked">
+    <img src="./img.png" alt="Locked Course">
+  </div>
+</div>
 
     <button class="buy-btn" onclick="buyCourse('js', 99)">
       Buy ₹99
     </button>
-
-    <div class="course-content"></div>
   </div>
 
   <!-- COURSE 2 -->
@@ -84,23 +88,32 @@
     <h3>CSS Animations & Transitions</h3>
     <p>Keyframes, transforms, performance</p>
 
+ <div class="course-content">
+  <div class="course-locked">
+    <img src="./img.png" alt="Locked Course">
+  </div>
+</div>
+
+
     <button class="buy-btn" onclick="buyCourse('css', 149)">
       Buy ₹149
     </button>
-
-    <div class="course-content"></div>
   </div>
 
   <!-- COURSE 3 -->
   <div class="card" data-course="java">
     <h3>Java Mastery</h3>
     <p>Transforms & performance</p>
+    
+  <div class="course-content">
+  <div class="course-locked">
+    <img src="./img.png" alt="Locked Course">
+  </div>
+</div>
 
     <button class="buy-btn" onclick="buyCourse('java', 49)">
       Buy ₹49
     </button>
-
-    <div class="course-content"></div>
   </div>
 
 </div>
