--- a/tutorials.html
+++ b/tutorials.html
@@ -68,7 +68,7 @@
           <div class="card" data-category="javascript">
             <h3>JavaScript Execution Context (Animated)</h3>
             <iframe width="100%" height="315"
-              src="https://www.youtube.com/embed/VIDEO_ID"
+              src="https://www.youtube.com/embed/3sM3j_zzaOQ"
               title="JavaScript Execution Context Animated Tutorial"
               allowfullscreen>
             </iframe>
@@ -78,7 +78,7 @@
           <div class="card" data-category="javascript">
             <h3>Understanding Closures in JavaScript</h3>
             <iframe width="100%" height="315"
-              src="https://www.youtube.com/embed/ANOTHER_VIDEO_ID"
+              src="https://www.youtube.com/embed/3sM3j_zzaOQ"
               title="Understanding Closures in JavaScript Tutorial"
               allowfullscreen>
             </iframe>
@@ -88,7 +88,7 @@
           <div class="card" data-category="html">
             <h3>HTML Semantic Elements Explained</h3>
             <iframe width="100%" height="315"
-              src="https://www.youtube.com/embed/HTML_VIDEO_ID"
+              src="https://www.youtube.com/embed/3sM3j_zzaOQ"
               title="HTML Semantic Elements Explained Tutorial"
               allowfullscreen>
             </iframe>
@@ -98,7 +98,7 @@
           <div class="card" data-category="css">
             <h3>CSS Flexbox in 2D Animation</h3>
             <iframe width="100%" height="315"
-              src="https://www.youtube.com/embed/CSS_VIDEO_ID"
+              src="https://www.youtube.com/embed/3sM3j_zzaOQ"
               title="CSS Flexbox in 2D Animation Tutorial"
               allowfullscreen>
             </iframe>
@@ -108,7 +108,7 @@
           <div class="card" data-category="javascript">
             <h3>Async/Await Made Simple</h3>
             <iframe width="100%" height="315"
-              src="https://www.youtube.com/embed/ASYNC_VIDEO_ID"
+              src="https://www.youtube.com/embed/3sM3j_zzaOQ"
               title="Async/Await Made Simple Tutorial"
               allowfullscreen>
             </iframe>
